@startuml

title __VIEW's Class Diagram__\n

  namespace View {
    class View.AdministratorView {
        - addButton : JButton
        - addEntryButton : JButton
        - comboBoxPanel : JPanel
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - deleteEntryButton : JButton
        - languageComboBox : JComboBox<String>
        - rootPanel : JPanel
        - tablePanel : JPanel
        - updateEntryButton : JButton
        - updateTable : JTable
        - updateTablePane : JScrollPane
        - viewCoordinatorsButton : JButton
        - viewPostmenButton : JButton
        + AdministratorView()
        + getAddButton()
        + getAddEntryButton()
        + getDataTable()
        + getDataTablePane()
        + getDeleteEntryButton()
        + getLanguageComboBox()
        + getUpdateEntryButton()
        + getUpdateTable()
        + getUpdateTablePane()
        + getViewCoordinatorsButton()
        + getViewPostmenButton()
        + setDataTable()
        + setUpdateTable()
        - createUIComponents()
        - initializeLanguageComboBox()
    }
  }
  

  namespace View {
    class View.ComboBoxRenderer {
        - background : Color
        - defaultBackground : Color
        - iconMap : Map<String, ImageIcon>
        - languages : List<String>
        + ComboBoxRenderer()
        + getListCellRendererComponent()
    }
  }
  

  namespace View {
    class View.CoordinatorView {
        - addButton : JButton
        - addParcelButton : JButton
        - comboBoxPanel : JPanel
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - deleteParcelButton : JButton
        - languageComboBox : JComboBox<String>
        - mapPane : JPanel
        - parcelIDTextField : JTextField
        - postmansTable : JTable
        - postmansTablePane : JScrollPane
        - reportTypeComboBox : JComboBox
        - rootPanel : JPanel
        - saveReportButton : JButton
        - searchParcelByIDButton : JButton
        - tabbedPane1 : JTabbedPane
        - tabbedPane2 : JTabbedPane
        - updateParcelButton : JButton
        - updateTable : JTable
        - updateTablePane : JScrollPane
        - viewParcelsButton : JButton
        - viewParcelsPane : JPanel
        + CoordinatorView()
        + addContainerToMapPane()
        + getAddButton()
        + getAddParcelButtonButton()
        + getDataTable()
        + getDataTablePane()
        + getDeleteParcelButton()
        + getLanguageComboBox()
        + getMainTabbedPane()
        + getPostmenTable()
        + getPostmenTablePane()
        + getReportTypeComboBoxText()
        + getSaveReportButton()
        + getSearchParcelByIDButton()
        + getSearchParcelByIDText()
        + getSecondaryTabbedPane()
        + getUpdateParcelButton()
        + getUpdateParcelButtonText()
        + getUpdateTable()
        + getUpdateTablePane()
        + getViewParcelsButton()
        + setDataTable()
        + setMainTabbedPane()
        + setPostmenTable()
        + setSecondaryTabbedPane()
        + setUpdateParcelButtonText()
        + setUpdateTable()
        - createUIComponents()
        - initializeLanguageComboBox()
    }
  }
  

  namespace View {
    class View.LoginView {
        - loginButton : JButton
        - passwordField : JPasswordField
        - rootPanel : JPanel
        - topLabel : JLabel
        - usernameField : JTextField
        + LoginView()
        + getTopLabelText()
        + setTopLabelText()
    }
  }
  

  namespace View {
    class View.PostmanView {
        - comboBoxPanel : JPanel
        - dataTable : JTable
        - dataTablePane : JScrollPane
        - languageComboBox : JComboBox<String>
        - mapPane : JPanel
        - parcelIDTextField : JTextField
        - parcelsPane : JPanel
        - rootPanel : JPanel
        - searchParcelByIDButton : JButton
        - tabbedPane1 : JTabbedPane
        - viewParcelsButton : JButton
        - welcomeLabel : JLabel
        + PostmanView()
        + PostmanView()
        + addContainerToMapPane()
        + getDataTable()
        + getDataTablePane()
        + getLanguageComboBox()
        + getSearchByParcelIDButton()
        + getSearchParcelByIDText()
        + getTabbedPanel()
        + getViewParcelsButton()
        + setDataTable()
        + setTabbedPane1()
        # getMainTabbedPane()
        - initializeLanguageComboBox()
    }
  }
  

  View.AdministratorView -up-|> javax.swing.JFrame
  View.ComboBoxRenderer -up-|> javax.swing.DefaultListCellRenderer
  View.CoordinatorView -up-|> javax.swing.JFrame
  View.LoginView -up-|> javax.swing.JFrame
  View.PostmanView -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
